--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "express-validator": "^6.14.1",
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.7.0",
+    "mongoose": "^6.3.6",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
