--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-client/node_modules
-client/.pnp
-client/.pnp.js
+node_modules/
+.pnp
+.pnp.js
 
 # testing
-client/coverage
+coverage
 
 # production
-client/build
+build
 
 # misc
-client/.DS_Store
-*/.DS_Store
 .DS_Store
 .env.local
 .env.development.local
@@ -21,9 +19,6 @@ client/.DS_Store
 .env.production.local
 .env
 
-client/npm-debug.log*
-client/yarn-debug.log*
-client/yarn-error.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -31,4 +26,4 @@ yarn-error.log*
 # SERVER
 
 # dependencies
-server/node_modules
+
